--- a/proof-of-concept/public/index.html
+++ b/proof-of-concept/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- <meta name="viewport" content="width=device&#45;width, initial&#45;scale=1, shrink&#45;to&#45;fit=no"> -->
+    <!-- <meta name="viewport" content="width=device&#45;width, initial&#45;scale=1, minimum&#45;scale=1, maximum&#45;scale=3"> -->
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="theme-color" content="#000000">
     <!--
       manifest.json provides metadata used when your web app is added to the
